# graph-rag

./: .dockerignore  .env.docker.example  .env.example  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_zh.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
scripts/: debug_graph_expansion.py  init_graph.py  reset_graph.py  reset_vector_store.py  run_test.py  test_graph_api.py  test_graph_query.py  test_multi_hop.py
src/: __init__.py  app.py
src/api/: build.py  retrieve.py
src/config/: settings.py
src/models/: schemas.py
src/services/: __init__.py  build.py  document_parser.py  embedding.py  entity_extractor.py  graph_schema.py  graph_store.py  knowledge_builder.py  llm.py  retrieval.py  vector_store.py
tests/: conftest.py  test_knowledge_graph.py
web/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/chat/: page.tsx
web/src/app/graph/: page.tsx
web/src/components/chat/: ChatInput.tsx  ChatInterface.tsx  ChatMessages.tsx  ChatSettings.tsx  MessageBubble.tsx  SourcePanel.tsx
web/src/components/graph/: GraphViewer.tsx  NodeDetail.tsx
web/src/components/layout/: Header.tsx  Sidebar.tsx
web/src/hooks/: useStreamQuery.ts
